# langchain_agent

./: .gitignore  README.md  app.py  app1.py  app2.py  app3.py  notes.txt  pyproject.toml  utils.py
langchain_agent/: client.py  global_conf.py  langGraph_chatbot assistant.py  langGraph_chatbot.py  simple_llm_chat.py  simple_llm_chatbot.py  simple_llm_serve.py
langchain_agent/Assistants/: assistance_interface.py  base_assistant.py  base_state.py  form_builder.py  form_expert.py  form_loader.py  form_parser.py  json_form.py  mock_assistant.py  orchestrator.py  simple_assistant.py
langchain_agent/Assistants/agents_features/: cost_calculator.py
langchain_agent/Assistants/examples/: form_parser1.in  form_parser1.out  form_parser2.in  test_form2.out  test_form2_almost_good.out  test_form2_second_almost_good.out
langchain_agent/Assistants/helping_features/: files_manager.py
langchain_agent/Assistants/old_assistants/: form_loader.py
langchain_agent/tutorials/: customer_support_bot1.py  customer_support_bot2.py  customer_support_bot3.py  customer_support_bot4.py  global_conf.py  notes.txt  tools_travel_example.py
tests/: formParserTests.py
