[tool.poetry]
name = "langchain-agent"
version = "0.1.0"
description = "Agents to learn langchain"
authors = ["Fernando Suárez Jiménez <fsuarezj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
